Fix the spinner buttons for enhace readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -41,7 +42,7 @@ h1 {
 }
 
 p {
-  font-size: 28px;
+  font-size: 1.75rem;
   color: #411111;
   font-weight: bold;
   white-space: pre-wrap;
@@ -142,7 +143,7 @@ fieldset {
   margin-top: 15px;
   padding-bottom: 25px;
   font-family: 'Plantagenet Cherokee', 'Arial', 'Helvetica', sans-serif;
-  font-size: 33px;
+  font-size: 2.063rem;
 }
 
 .form-row input {
@@ -160,7 +161,7 @@ fieldset input[type="submit"] {
   border: 2px solid black;
   text-transform: uppercase;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 1.125rem;
   display: block;
   margin: 19px auto 0;
   cursor: pointer;
@@ -217,7 +218,7 @@ fieldset input[type="submit"] {
   bottom:0;
   top: 0;
   width: 18%;
-  font-size: 18px;
+  font-size: 1.125rem;
   cursor: pointer;
 }
 
@@ -243,6 +244,28 @@ fieldset input[type="submit"] {
 .hidden-row {
   display: none;
 }
+
+.spinner-container {
+  position: absolute; 
+  bottom: 5%;
+  right: 5%;
+  font-size: 0;
+  z-index: 5;
+}
+
+.spinner-btn {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.18rem;
+  background-color: transparent;
+  border: 1px solid;
+}
+.spinner-btn:last-child {
+  border-left: 0;
+}
+
 /*Media Queries*/
 @media only screen and (max-width: 1200px) {
   body {
